card done style done

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 <body>
 
     <div class="container">
-        <nav class="d-flex flex-xs-column justify-content-around my-nav">
+        <nav class=" my-nav">
             <a class="display-4 stickFont" href="">codeshare</a>
             <ul class="list-inline pt-4 light">
 
@@ -43,11 +43,13 @@
                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                         the card's content.</p>
-                    <a href="#" class="text-muted">Card link</a>
-                    <a href="#" class="card-link">Another link</a>
+                    <div class="cardFooter">
+                        <span class="text-muted">Posted:</span>
+                        <a href="#" class="card-link">Code</a>
+                    </div>
                 </div>
-
             </div>
+
         </section>
 
         <div id="app">
