card demo in front end

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
+    <!-- axios -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+
     <!-- my styles -->
     <link rel="stylesheet" href="./src/style.css">
 </head>
@@ -40,11 +44,11 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                    <h6 class="card-subtitle mb-1 mx-3 text-muted">- Card subtitle</h6>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                         the card's content.</p>
                     <div class="cardFooter">
-                        <span class="text-muted">Posted:</span>
+                        <span class="text-muted text-italic"><em>Posted:</em></span>
                         <a href="#" class="card-link">Code</a>
                     </div>
                 </div>
@@ -52,7 +56,7 @@
 
         </section>
 
-        <div id="app">
+        <div id="homePage">
             {{ message }}
         </div>
     </div>
