--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>CodeShare</title>
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -39,9 +39,21 @@
         </nav>
 
 
-        <section>
+        <section id="homePage">
 
-            <div class="card" style="width: 20rem;">
+            <div v-for="code in codes" :key="code._id" class="card" style="width: 20rem;">
+                <div class="card-body">
+                    <h5 class="card-title">{{code.title}}</h5>
+                    <h6 class="card-subtitle mb-1 mx-3 text-muted">- {{code.author}}</h6>
+                    <p class="card-text">{{code.description}}</p>
+                    <div class="cardFooter">
+                        <span class="text-muted text-italic"><em>Posted:{{code.posted}}</em></span>
+                        <a href="#" class="card-link">Code</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class="card" style="width: 20rem;">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <h6 class="card-subtitle mb-1 mx-3 text-muted">- Card subtitle</h6>
@@ -52,20 +64,12 @@
                         <a href="#" class="card-link">Code</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </section>
 
-        <div id="homePage">
-            {{ message }}
-        </div>
+
     </div>
-
-
-
-
-
-
     <script src="./src/script.js"></script>
 </body>
 
