--- a/public/index.html
+++ b/public/index.html
@@ -45,27 +45,6 @@
 
 
 
-        <!-- Button trigger modal -->
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal"></button>
-
-        <!-- Modal -->
-        <div class="modal" id="myModal">
-            <div class="modal-dialog modal-lg ">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <div class="modal-title">{{code.title}}</div>
-
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
-                    <div class="modal-body">
-                        <p>{{code.description}}</p>
-                        <p>{{code.code}}</p>
-
-                    </div>
-                    <div class="modal-footer"></div>
-                </div>
-            </div>
-        </div>
 
 
 
@@ -81,12 +60,12 @@
                     <div class="cardFooter">
                         <span class="text-muted text-italic"><em>Posted:{{code.posted}}</em></span>
                         <!-- Button trigger modal -->
-                        <a href="#" class="card-link" :data-bs-toggle="`${code._id}`"
-                            :data-bs-target="`#${code._id}`">Code</a>
+                        <button type="button" href="#" class="card-link" data-bs-toggle="modal"
+                            :data-bs-target="`#mid${code._id}`">Code</button>
 
 
                         <!-- Modal -->
-                        <div class="modal" :id="code._id">
+                        <div class="modal" :id="`mid${code._id}`">
                             <div class="modal-dialog modal-lg ">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -120,6 +99,49 @@
                     </div>
                 </div>
             </div> -->
+
+            <!-- <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal"></button>
+
+  
+        <div class="modal" id="myModal">
+            <div class="modal-dialog modal-lg ">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <div class="modal-title">modal 1</div>
+
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>{{code.description}}</p>
+                        <p>{{code.code}}</p>
+
+                    </div>
+                    <div class="modal-footer"></div>
+                </div>
+            </div>
+        </div>
+      
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal2"></button>
+
+        <div class="modal" id="myModal2">
+            <div class="modal-dialog modal-lg ">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <div class="modal-title">modal2</div>
+
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>{{code.description}}</p>
+                        <p>{{code.code}}</p>
+
+                    </div>
+                    <div class="modal-footer"></div>
+                </div>
+            </div>
+        </div>
+ -->
+
 
         </section>
 
