axios removed, fetch api used

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
-    <!-- axios -->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
     <!-- prism-js for code highlighting -->
     <link rel="stylesheet" href="./src/prism.css">
@@ -35,9 +33,9 @@
             <a class="display-4 stickFont" href="">codeshare</a>
             <ul class="list-inline pt-4 light">
 
-                <li class="list-inline-item "><a href="">Home</a></li>
+                <li class="list-inline-item "><a href="/">Home</a></li>
                 <li class="list-inline-item"><a href="">About</a></li>
-                <li class="list-inline-item"><a href="">Post</a></li>
+                <li class="list-inline-item"><a href="./src/post.html">Post</a></li>
                 <li class="list-inline-item"><a href="">Admin</a></li>
             </ul>
         </nav>
