--- a/public/src/post.html
+++ b/public/src/post.html
@@ -9,7 +9,7 @@
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Stick&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Stick&display=swap" rel="stylesheet">
     <!-- Vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <!-- bootstrap -->
@@ -28,7 +28,7 @@
 
     <div class="container">
         <nav class=" my-nav">
-            <a class="display-4 stickFont" href="">codeshare</a>
+            <a class="display-4 stickFont" href="/">codeshare</a>
             <ul class="list-inline pt-4 light">
 
                 <li class="list-inline-item "><a href="../index.html">Home</a></li>
