BUGFIX: post fetch() call 2 times

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                     <h6 class="card-subtitle mb-1 mx-3 text-muted">- {{code.author}}</h6>
                     <p class="card-text">{{code.description}}</p>
                     <div class="cardFooter">
-                        <span class="text-muted text-italic small"><em>Posted:{{code.posted}}</em></span>
+                        <span class="text-muted text-italic small"><em>Posted:{{code.date}}</em></span>
                         <!-- Button trigger modal -->
                         <button type="button" href="#" class="card-link btn " data-bs-toggle="modal"
                             :data-bs-target="`#mid${code._id}`">Code</button>
