redirect after posted

--- a/public/src/post.html
+++ b/public/src/post.html
@@ -118,7 +118,7 @@
                             .then(response => response.json())
 
                             // Displaying results to console 
-                            .then(json => console.log(json));
+                            .then(json => window.location = "https://code-share-rbh.herokuapp.com/");
                     }
                 },
 
