--- a/public/src/post.html
+++ b/public/src/post.html
@@ -114,11 +114,9 @@
                             }
                         })
 
-                            // Converting to JSON 
-                            .then(response => response.json())
-
-                            // Displaying results to console 
-                            .then(json => window.location = "https://code-share-rbh.herokuapp.com/");
+                            // redirect after success
+                            .then(response => window.location = "https://code-share-rbh.herokuapp.com/")
+                            ;
                     }
                 },
 
