--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div class="container">
         <nav class=" my-nav">
             <a class="display-4 stickFont" href="">codeshare</a>
-            <ul class="list-inline pt-4 light">
+            <ul class="list-inline light">
 
                 <li class="list-inline-item "><a href="/">Home</a></li>
                 <li class="list-inline-item"><a href="">About</a></li>
@@ -55,7 +55,7 @@
                     <h6 class="card-subtitle mb-1 mx-3 text-muted">- {{code.author}}</h6>
                     <p class="card-text">{{code.description}}</p>
                     <div class="cardFooter">
-                        <span class="text-muted text-italic small"><em>Posted:{{code.date}}</em></span>
+                        <span class="text-muted text-italic small"><em>Posted:{{code.posted}}</em></span>
                         <!-- Button trigger modal -->
                         <button type="button" href="#" class="card-link btn " data-bs-toggle="modal"
                             :data-bs-target="`#mid${code._id}`">Code</button>
@@ -171,10 +171,14 @@
 
                             this.codes = json;
 
-                            // < > changed to appropriate Entity Name 
+                            // preprocessing data for UI
                             this.codes.forEach(e => {
+                                // < > changing this to appropriate codes
                                 e.code = e.code.replaceAll('<', '&lt;');
                                 e.code = e.code.replaceAll('>', '&gt;');
+                                // getting the date for use date-month-year
+                                e.posted = new Date(e.date)
+                                e.posted = e.posted.toDateString();
                             });
 
                         })
