prism.js features not working no idea Y

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <p>{{code.description}}</p>
-                                        <pre><code class="language-C" v-html="code.code">
+                                        <pre><code class="language-c" v-html="code.code">
 
                                         </code></pre>
 
