--- a/public/src/post.html
+++ b/public/src/post.html
@@ -32,9 +32,9 @@
             <ul class="list-inline pt-4 light">
 
                 <li class="list-inline-item "><a href="../index.html">Home</a></li>
-                <li class="list-inline-item"><a href="">About</a></li>
-                <li class="list-inline-item"><a href="/post">Post</a></li>
-                <li class="list-inline-item"><a href="">Admin</a></li>
+                <li class="list-inline-item"><a href="/about.html">About</a></li>
+                <li class="list-inline-item"><a href="/post.html">Post</a></li>
+                <li class="list-inline-item"><a href="/admin.html">Admin</a></li>
             </ul>
         </nav>
 
