--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
                 <li class="list-inline-item "><a href="/">Home</a></li>
                 <li class="list-inline-item"><a href="">About</a></li>
                 <li class="list-inline-item"><a href="./src/post.html">Post</a></li>
-                <li class="list-inline-item"><a href="">Admin</a></li>
+                <li class="list-inline-item"><a href="./src/admin.html">Admin</a></li>
             </ul>
         </nav>
 
