--- a/public/index.html
+++ b/public/index.html
@@ -34,17 +34,11 @@
             <ul class="list-inline light">
 
                 <li class="list-inline-item "><a href="/">Home</a></li>
-                <li class="list-inline-item"><a href="">About</a></li>
+                <li class="list-inline-item"><a href="./src/about.html">About</a></li>
                 <li class="list-inline-item"><a href="./src/post.html">Post</a></li>
                 <li class="list-inline-item"><a href="./src/admin.html">Admin</a></li>
             </ul>
         </nav>
-
-
-
-
-
-
 
 
         <section id="homePage">
