--- a/public/src/about.html
+++ b/public/src/about.html
@@ -31,12 +31,16 @@
             <a class="display-4 stickFont" href="/">codeshare</a>
             <ul class="list-inline pt-4 light">
 
-                <li class="list-inline-item "><a href="../index.html">Home</a></li>
-                <li class="list-inline-item"><a href="/about.html">About</a></li>
-                <li class="list-inline-item"><a href="/post.html">Post</a></li>
-                <li class="list-inline-item"><a href="/admin.html">Admin</a></li>
+                <li class="list-inline-item "><a href="/">Home</a></li>
+                <li class="list-inline-item"><a href="./about.html">About</a></li>
+                <li class="list-inline-item"><a href="./post.html">Post</a></li>
+                <li class="list-inline-item"><a href="./admin.html">Admin</a></li>
             </ul>
         </nav>
+
+        <div class="about-section">
+
+        </div>
 
 
 
