FEAT: current page will have nav li highlighted

--- a/public/src/about.html
+++ b/public/src/about.html
@@ -32,7 +32,7 @@
             <ul class="list-inline pt-4 light">
 
                 <li class="list-inline-item "><a href="/">Home</a></li>
-                <li class="list-inline-item"><a href="./about.html">About</a></li>
+                <li class="list-inline-item"><a class="link-live" href="./about.html">About</a></li>
                 <li class="list-inline-item"><a href="./post.html">Post</a></li>
                 <li class="list-inline-item"><a href="./admin.html">Admin</a></li>
             </ul>
