--- a/public/src/post.html
+++ b/public/src/post.html
@@ -33,7 +33,7 @@
 
                 <li class="list-inline-item "><a href="/">Home</a></li>
                 <li class="list-inline-item"><a href="./about.html">About</a></li>
-                <li class="list-inline-item"><a href="./post.html">Post</a></li>
+                <li class="list-inline-item"><a class="link-live" href="./post.html">Post</a></li>
                 <li class="list-inline-item"><a href="./admin.html">Admin</a></li>
             </ul>
         </nav>
