--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             <a class="display-4 stickFont" href="">codeshare</a>
             <ul class="list-inline light">
 
-                <li class="list-inline-item "><a href="/">Home</a></li>
+                <li class="list-inline-item "><a class="link-live" href="/">Home</a></li>
                 <li class="list-inline-item"><a href="./src/about.html">About</a></li>
                 <li class="list-inline-item"><a href="./src/post.html">Post</a></li>
                 <li class="list-inline-item"><a href="./src/admin.html">Admin</a></li>
