--- a/public/src/about.html
+++ b/public/src/about.html
@@ -45,7 +45,11 @@
 
 
         <section id="about-section">
-            <p>about section</p>
+
+            <div class="content-about">
+                <h4>Making of the site</h4>
+                <p>A quick place to save your code for sharing or for future reference </p>
+            </div>
         </section>
 
 
