--- a/public/src/404.html
+++ b/public/src/404.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>404</title>
+    <!-- my styles -->
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 
 <body>
-    <h1>404</h1>
+    <div class=" fourOfour">
+        <img src="../assets/404.jpg" alt="">
+        <h1>404 error</h1>
+    </div>
+
 </body>
 
 </html>
