--- a/public/src/about.html
+++ b/public/src/about.html
@@ -34,7 +34,7 @@
                 <li class="list-inline-item "><a href="/">Home</a></li>
                 <li class="list-inline-item"><a class="link-live" href="./about.html">About</a></li>
                 <li class="list-inline-item"><a href="./post.html">Post</a></li>
-                <li class="list-inline-item"><a href="./admin.html">Admin</a></li>
+                <li class="list-inline-item"><a href="/admin">Admin</a></li>
             </ul>
         </nav>
 
