--- a/public/src/404.html
+++ b/public/src/404.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class=" fourOfour">
-        <img src="../assets/404.jpg" alt="">
+        <img src="./assets/404.jpg" alt="">
         <h1>404 error</h1>
     </div>
 
