admin page moved from express static folder, else is accessible through path from the browser

--- a/guardedPages/admin.html
+++ b/guardedPages/admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeShare</title>
+    <title>Admin Panel</title>
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -34,8 +34,8 @@
             <ul class="list-inline pt-4 light">
 
                 <li class="list-inline-item "><a href="/">Home</a></li>
-                <li class="list-inline-item"><a href="./about.html">About</a></li>
-                <li class="list-inline-item"><a href="./post.html">Post</a></li>
+                <li class="list-inline-item"><a href="./src/about.html">About</a></li>
+                <li class="list-inline-item"><a href="./src/post.html">Post</a></li>
                 <li class="list-inline-item"><a class="live-link" href="/admin">Admin</a></li>
             </ul>
         </nav>
