--- a/public/src/post.html
+++ b/public/src/post.html
@@ -96,27 +96,17 @@
                     postButton: function () {
                         // POST request using fetch() 
                         fetch("https://code-share-rbh.herokuapp.com/code", {
-
-                            // Adding method type 
-                            method: "POST",
-
-                            // Adding body or contents to send 
-                            body: JSON.stringify({
+                            method: "POST", // Adding method type 
+                            body: JSON.stringify({  // Adding body or contents to send 
                                 "author": this.author,
                                 "title": this.title,
                                 "description": this.description,
                                 "code": this.code
                             }),
-
-                            // Adding headers to the request 
-                            headers: {
+                            headers: {  // Adding headers to the request 
                                 "Content-type": "application/json; charset=UTF-8"
                             }
-                        })
-
-                            // redirect after success
-                            .then(response => window.location = "https://code-share-rbh.herokuapp.com/")
-                            ;
+                        }).then(response => window.location = "https://code-share-rbh.herokuapp.com/"); // redirect after success
                     }
                 },
 
